# boilerplate-python

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
boilerplate/: __init__.py  stuff.py  thing.py
boilerplate/tests/: test_stuff.py  test_thing.py
docs/: conf.py  index.rst  module.rst
