[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "A boilerplate Python project."
authors = ["Austin Gill <notgnoshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.3-beta.0", allows-prereleases = true}
coverage = "^4.5"
isort = "^4.3"
nose = "^1.3"
pydocstyle = "^4.0"
pylint = "^2.3"
Sphinx = "^2.2"
sphinxcontrib-napoleon = "^0.7.0"
sphinxcontrib-websupport = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
